--- a/index.html
+++ b/index.html
@@ -1,53 +1,37 @@
-<html lang="pt-BR">
-
-<head>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet">
-    <title>Jessicaflix</title>
-</head>
-
 <body>
-    <header>JESSICAFLIX</header>
-
-    <section class="chamada">
-        <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO</h1>
-            <p>#homem-aranha</p>
+    <header class="container">
+      <img src="img/avatar-perfil.png" alt="avatar do Maiky" srcset="" />
+      <p>Eu sou Maiky</p>
+      <h1>Eu estudo Programação</h1>
+      <p>
+        Sou aluno do Colégio Estadual Conselheiro Carrão
+      </p>
+      <p>Minhas habilidades</p>
+      <div>
+        <p class= "badge bg secondary">HTML</p>
+        <p class= "badge bg secondary"></p>CSS</p>
+        <p class= "badge bg secondary"></p>JavaScript</p>
+        <p class= "badge bg secondary"></p>Scratch</p>
+      </div>
+    </header>
+  </body>
+  <main class="container">
+    <h2>Meus projetos</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+            <p class="card-text">
+                Este projeto é uma página web que apresenta uma lista dos meus livros
+                favoritos, incluindo informações sobre os autores, datas de publicação e
+                links para compra na Amazon. A página é estilizada com CSS para uma
+                visualização agradável e usa fontes externas do Google Fonts.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
         </div>
-
-        <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-    </section>
-
-    <section class="categoria">
-        <h2>Filmes e séries</h2>
-        <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
-            </a>
-        </div>
-    </section>
-
-</body>
-
-</html>
+      </div>
+    </div>
+  </main>
